src/objects/JiraAssigneeData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To maintain the data of the assignee&apos;s for jira tickets</description>
    <fields>
        <fullName>AssigneeEmail__c</fullName>
        <label>Assignee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AssigneeMobile__c</fullName>
        <label>Assignee Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AssigneePhone__c</fullName>
        <label>Assignee Phone</label>
        <type>Phone</type>
    </fields>
    <label>Jira Assignee Data</label>
</CustomObject>